--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,9 +1,13 @@
-apiVersion: skaffold/v2beta23
+apiVersion: skaffold/v2beta26
 kind: Config
+metadata:
+  name: getting-started
 build:
   artifacts:
   - image: skaffold-example
+    docker:
+      dockerfile: Dockerfile
 deploy:
   kubectl:
     manifests:
-      - k8s-*
+    - k8s-pod.yaml
